kubernetes/apps/ryot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ryot
  namespace: ryot
  labels:
    app: ryot
spec:
  selector:
    app: ryot
  ports:
    - name: http
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ryot-postgres
  namespace: ryot
  labels:
    app: ryot-postgres
spec:
  selector:
    app: ryot-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
