kubernetes/apps/ryot/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ryot
  namespace: ryot
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`track.pxldi.de`)
      priority: 10
      middlewares:
        - name: internal-only
          namespace: traefik
      services:
        - name: ryot
          port: 8000
